--- a/BienesRaicesSCZ/pom.xml
+++ b/BienesRaicesSCZ/pom.xml
@@ -5,17 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
-		<relativePath/>
-	</parent>
-	<groupId>com.bienes.bienesraicesscz</groupId>
+		<version>3.5.5</version> <relativePath/> </parent>
+	<groupId>com.bienes</groupId>
 	<artifactId>BienesRaicesSCZ</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>BienesRaicesSCZ</name>
-	<description>Mejor imobiliaria</description>
+	<description>Proyecto de Bienes Raíces</description>
 	<properties>
-		<java.version>17</java.version>
-	</properties>
+		<java.version>17</java.version> </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -25,23 +22,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -50,4 +48,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
