--- a/BienesRaicesSCZ/src/main/resources/application.properties
+++ b/BienesRaicesSCZ/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 # Configuración del Puerto del Servidor
 server.port=${PORT:8081}
 
+# Configuración Manual y Explícita de la Base de Datos para Railway
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Configuración de Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
