--- a/BienesRaicesSCZ/pom.xml
+++ b/BienesRaicesSCZ/pom.xml
@@ -6,7 +6,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.5</version>
-		<relativePath/> </parent>
+		<relativePath/>
+	</parent>
 	<groupId>com.bienes</groupId>
 	<artifactId>BienesRaicesSCZ</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
