--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-# Configuración del Puerto del Servidor (Fly.io usa 8080 por defecto)
+# Puerto del servidor (Render/Fly.io lo inyecta con $PORT)
 server.port=${PORT:8080}
 
-# Configuración de Hibernate
+# Configuración de PostgreSQL
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
